// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LadderPage renders the empty state 1`] = `
<div
  className="m-ladder-page m-ladder-page--picker-container-visible "
>
  <div
    className="m-notifications"
  />
  <div
    className="m-picker-container visible"
    data-testid="picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-ladder-page__routes-presets-toggle"
    >
      <button
        className="m-ladder-page__routes_picker_button_selected"
        id="m-ladder-page__routes_picker_button"
        onClick={[Function]}
      >
        Routes
      </button>
      <button
        className="m-ladder-page__routes_picker_button_unselected"
        id="m-ladder-page__presets_picker_button"
        onClick={[Function]}
      >
        Presets
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <div
        className="m-route-filter"
      >
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search routes"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="m-garage-filter"
      >
        <button
          className="m-garage-filter__show-hide-button"
          onClick={[Function]}
          title="Toggle Garage Filter"
        >
          <div
            className="m-garage-filter__header"
          >
            Filter garages
          </div>
          <div
            className="m-garage-filter__show-hide-icon"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </button>
      </div>
      <div
        className="m-route-picker__routes-container"
      >
        loading...
        <p>
          Selected routes will show up here…
        </p>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    className="m-picker-container-overlay"
    data-testid="picker-container-overlay"
    onClick={[Function]}
  />
  <div
    className="m-ladder-page__tab-bar-and-ladders"
  >
    <div
      className="m-ladder-page__route-tab-bar"
      role="tablist"
    >
      <button
        className="m-ladder-page__add-tab-button"
        onClick={[Function]}
      >
        <span
          className="m-ladder-page__add-tab-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-ladders"
      data-testid="route-ladders-div"
      onWheel={[Function]}
    />
  </div>
</div>
`;

exports[`LadderPage renders with route tabs 1`] = `
<div
  className="m-ladder-page m-ladder-page--picker-container-visible "
>
  <div
    className="m-notifications"
  />
  <div
    className="m-picker-container visible"
    data-testid="picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-ladder-page__routes-presets-toggle"
    >
      <button
        className="m-ladder-page__routes_picker_button_selected"
        id="m-ladder-page__routes_picker_button"
        onClick={[Function]}
      >
        Routes
      </button>
      <button
        className="m-ladder-page__routes_picker_button_unselected"
        id="m-ladder-page__presets_picker_button"
        onClick={[Function]}
      >
        Presets
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <div
        className="m-route-filter"
      >
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search routes"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="m-garage-filter"
      >
        <button
          className="m-garage-filter__show-hide-button"
          onClick={[Function]}
          title="Toggle Garage Filter"
        >
          <div
            className="m-garage-filter__header"
          >
            Filter garages
          </div>
          <div
            className="m-garage-filter__show-hide-icon"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </button>
      </div>
      <div
        className="m-route-picker__routes-container"
      >
        <ul
          className="m-route-picker__route-list"
        >
          <li>
            <button
              className="m-route-picker__route-list-button"
              onClick={[Function]}
            >
              28
            </button>
          </li>
        </ul>
        <ul
          className="m-route-picker__selected-routes"
        >
          <li>
            <button
              className="m-route-picker__selected-routes-button"
              onClick={[Function]}
            >
              1
              <span
                className="m-route-picker__selected-routes-button-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    className="m-picker-container-overlay"
    data-testid="picker-container-overlay"
    onClick={[Function]}
  />
  <div
    className="m-ladder-page__tab-bar-and-ladders"
  >
    <div
      className="m-ladder-page__route-tab-bar"
      role="tablist"
    >
      <div
        className="m-ladder-page__tab m-ladder-page__tab-current"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="m-ladder-page__tab-contents"
        >
          <div
            className="m-ladder-page__tab-title"
          >
            Untitled
          </div>
          <button
            className="m-ladder-page__tab-save-button"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
          <button
            className="m-close-button"
            data-testid="close-button"
            onClick={[Function]}
            title="Close"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <div
        className="m-ladder-page__tab"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        <div
          className="m-ladder-page__tab-contents"
        >
          <div
            className="m-ladder-page__tab-title"
          >
            Untitled
          </div>
          <button
            className="m-close-button"
            data-testid="close-button"
            onClick={[Function]}
            title="Close"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <button
        className="m-ladder-page__add-tab-button"
        onClick={[Function]}
      >
        <span
          className="m-ladder-page__add-tab-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-ladders"
      data-testid="route-ladders-div"
      onWheel={[Function]}
    >
      <div
        className="m-route-ladder__header"
      >
        <button
          className="m-close-button"
          data-testid="close-button"
          onClick={[Function]}
          title="Close"
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
        <div
          className="m-route-ladder__route-name"
        >
          1
        </div>
      </div>
      <div
        className="m-route-ladder__controls"
      >
        <button
          className="m-route-ladder__reverse"
          onClick={[Function]}
        >
          <span
            className="m-route-ladder__reverse-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Reverse
        </button>
      </div>
      loading...
    </div>
  </div>
</div>
`;

exports[`LadderPage renders with selectedRoutes in different order than routes data 1`] = `
<div
  className="m-ladder-page m-ladder-page--picker-container-visible "
>
  <div
    className="m-notifications"
  />
  <div
    className="m-picker-container visible"
    data-testid="picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-ladder-page__routes-presets-toggle"
    >
      <button
        className="m-ladder-page__routes_picker_button_selected"
        id="m-ladder-page__routes_picker_button"
        onClick={[Function]}
      >
        Routes
      </button>
      <button
        className="m-ladder-page__routes_picker_button_unselected"
        id="m-ladder-page__presets_picker_button"
        onClick={[Function]}
      >
        Presets
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <div
        className="m-route-filter"
      >
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search routes"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="m-garage-filter"
      >
        <button
          className="m-garage-filter__show-hide-button"
          onClick={[Function]}
          title="Toggle Garage Filter"
        >
          <div
            className="m-garage-filter__header"
          >
            Filter garages
          </div>
          <div
            className="m-garage-filter__show-hide-icon"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </button>
      </div>
      <div
        className="m-route-picker__routes-container"
      >
        <ul
          className="m-route-picker__route-list"
        />
        <ul
          className="m-route-picker__selected-routes"
        >
          <li>
            <button
              className="m-route-picker__selected-routes-button"
              onClick={[Function]}
            >
              28
              <span
                className="m-route-picker__selected-routes-button-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </li>
          <li>
            <button
              className="m-route-picker__selected-routes-button"
              onClick={[Function]}
            >
              1
              <span
                className="m-route-picker__selected-routes-button-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    className="m-picker-container-overlay"
    data-testid="picker-container-overlay"
    onClick={[Function]}
  />
  <div
    className="m-ladder-page__tab-bar-and-ladders"
  >
    <div
      className="m-ladder-page__route-tab-bar"
      role="tablist"
    >
      <div
        className="m-ladder-page__tab m-ladder-page__tab-current"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="m-ladder-page__tab-contents"
        >
          <div
            className="m-ladder-page__tab-title"
          >
            Untitled
          </div>
          <button
            className="m-ladder-page__tab-save-button"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
          <button
            className="m-close-button"
            data-testid="close-button"
            onClick={[Function]}
            title="Close"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <button
        className="m-ladder-page__add-tab-button"
        onClick={[Function]}
      >
        <span
          className="m-ladder-page__add-tab-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-ladders"
      data-testid="route-ladders-div"
      onWheel={[Function]}
    >
      <div
        className="m-route-ladder__header"
      >
        <button
          className="m-close-button"
          data-testid="close-button"
          onClick={[Function]}
          title="Close"
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
        <div
          className="m-route-ladder__route-name"
        >
          28
        </div>
      </div>
      <div
        className="m-route-ladder__controls"
      >
        <button
          className="m-route-ladder__reverse"
          onClick={[Function]}
        >
          <span
            className="m-route-ladder__reverse-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Reverse
        </button>
      </div>
      loading...
      <div
        className="m-route-ladder__header"
      >
        <button
          className="m-close-button"
          data-testid="close-button"
          onClick={[Function]}
          title="Close"
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
        <div
          className="m-route-ladder__route-name"
        >
          1
        </div>
      </div>
      <div
        className="m-route-ladder__controls"
      >
        <button
          className="m-route-ladder__reverse"
          onClick={[Function]}
        >
          <span
            className="m-route-ladder__reverse-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Reverse
        </button>
      </div>
      loading...
    </div>
  </div>
</div>
`;

exports[`LadderPage renders with timepoints 1`] = `
<div
  className="m-ladder-page m-ladder-page--picker-container-visible "
>
  <div
    className="m-notifications"
  />
  <div
    className="m-picker-container visible"
    data-testid="picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-ladder-page__routes-presets-toggle"
    >
      <button
        className="m-ladder-page__routes_picker_button_selected"
        id="m-ladder-page__routes_picker_button"
        onClick={[Function]}
      >
        Routes
      </button>
      <button
        className="m-ladder-page__routes_picker_button_unselected"
        id="m-ladder-page__presets_picker_button"
        onClick={[Function]}
      >
        Presets
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <div
        className="m-route-filter"
      >
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search routes"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="m-garage-filter"
      >
        <button
          className="m-garage-filter__show-hide-button"
          onClick={[Function]}
          title="Toggle Garage Filter"
        >
          <div
            className="m-garage-filter__header"
          >
            Filter garages
          </div>
          <div
            className="m-garage-filter__show-hide-icon"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </button>
      </div>
      <div
        className="m-route-picker__routes-container"
      >
        <ul
          className="m-route-picker__route-list"
        />
        <ul
          className="m-route-picker__selected-routes"
        >
          <li>
            <button
              className="m-route-picker__selected-routes-button"
              onClick={[Function]}
            >
              28
              <span
                className="m-route-picker__selected-routes-button-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </li>
          <li>
            <button
              className="m-route-picker__selected-routes-button"
              onClick={[Function]}
            >
              1
              <span
                className="m-route-picker__selected-routes-button-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    className="m-picker-container-overlay"
    data-testid="picker-container-overlay"
    onClick={[Function]}
  />
  <div
    className="m-ladder-page__tab-bar-and-ladders"
  >
    <div
      className="m-ladder-page__route-tab-bar"
      role="tablist"
    >
      <div
        className="m-ladder-page__tab m-ladder-page__tab-current"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="m-ladder-page__tab-contents"
        >
          <div
            className="m-ladder-page__tab-title"
          >
            Untitled
          </div>
          <button
            className="m-ladder-page__tab-save-button"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
          <button
            className="m-close-button"
            data-testid="close-button"
            onClick={[Function]}
            title="Close"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <button
        className="m-ladder-page__add-tab-button"
        onClick={[Function]}
      >
        <span
          className="m-ladder-page__add-tab-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-ladders"
      data-testid="route-ladders-div"
      onWheel={[Function]}
    >
      <div
        className="m-route-ladder__header"
      >
        <button
          className="m-close-button"
          data-testid="close-button"
          onClick={[Function]}
          title="Close"
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
        <div
          className="m-route-ladder__route-name"
        >
          28
        </div>
      </div>
      <div
        className="m-route-ladder__controls"
      >
        <button
          className="m-route-ladder__reverse"
          onClick={[Function]}
        >
          <span
            className="m-route-ladder__reverse-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Reverse
        </button>
      </div>
      <div
        className="m-ladder"
        style={
          Object {
            "width": 184,
          }
        }
      >
        <svg
          className="m-ladder__svg"
          height={0}
          viewBox="-92 -55 184 0"
          width={184}
        >
          <line
            className="m-ladder__line"
            x1={-40}
            x2={-40}
            y1="0"
            y2={-110}
          />
          <line
            className="m-ladder__line"
            x1={40}
            x2={40}
            y1="0"
            y2={-110}
          />
          <circle
            className="m-ladder__stop-circle"
            cx={-40}
            cy={-0}
            r="3"
          />
          <circle
            className="m-ladder__stop-circle"
            cx={40}
            cy={-0}
            r="3"
          />
          <div
            className="mock-tippy"
          >
            <div
              className="mock-tippy-content"
            >
              MATPN Name
            </div>
            <text
              className="m-ladder__timepoint-name"
              dominantBaseline="middle"
              textAnchor="middle"
              x="0"
              y={-0}
            >
              MATPN
            </text>
          </div>
          <circle
            className="m-ladder__stop-circle"
            cx={-40}
            cy={-55}
            r="3"
          />
          <circle
            className="m-ladder__stop-circle"
            cx={40}
            cy={-55}
            r="3"
          />
          <div
            className="mock-tippy"
          >
            <div
              className="mock-tippy-content"
            >
              WELLH Name
            </div>
            <text
              className="m-ladder__timepoint-name"
              dominantBaseline="middle"
              textAnchor="middle"
              x="0"
              y={-55}
            >
              WELLH
            </text>
          </div>
          <circle
            className="m-ladder__stop-circle"
            cx={-40}
            cy={-110}
            r="3"
          />
          <circle
            className="m-ladder__stop-circle"
            cx={40}
            cy={-110}
            r="3"
          />
          <div
            className="mock-tippy"
          >
            <div
              className="mock-tippy-content"
            >
              MORTN Name
            </div>
            <text
              className="m-ladder__timepoint-name"
              dominantBaseline="middle"
              textAnchor="middle"
              x="0"
              y={-110}
            >
              MORTN
            </text>
          </div>
        </svg>
      </div>
      <div
        className="m-incoming-box"
      />
      <div
        className="m-route-ladder__header"
      >
        <button
          className="m-close-button"
          data-testid="close-button"
          onClick={[Function]}
          title="Close"
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
        <div
          className="m-route-ladder__route-name"
        >
          1
        </div>
      </div>
      <div
        className="m-route-ladder__controls"
      >
        <button
          className="m-route-ladder__reverse"
          onClick={[Function]}
        >
          <span
            className="m-route-ladder__reverse-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Reverse
        </button>
      </div>
      <div
        className="m-ladder"
        style={
          Object {
            "width": 184,
          }
        }
      >
        <svg
          className="m-ladder__svg"
          height={0}
          viewBox="-92 -55 184 0"
          width={184}
        >
          <line
            className="m-ladder__line"
            x1={-40}
            x2={-40}
            y1="0"
            y2={-110}
          />
          <line
            className="m-ladder__line"
            x1={40}
            x2={40}
            y1="0"
            y2={-110}
          />
          <circle
            className="m-ladder__stop-circle"
            cx={-40}
            cy={-0}
            r="3"
          />
          <circle
            className="m-ladder__stop-circle"
            cx={40}
            cy={-0}
            r="3"
          />
          <div
            className="mock-tippy"
          >
            <div
              className="mock-tippy-content"
            >
              WASMA Name
            </div>
            <text
              className="m-ladder__timepoint-name"
              dominantBaseline="middle"
              textAnchor="middle"
              x="0"
              y={-0}
            >
              WASMA
            </text>
          </div>
          <circle
            className="m-ladder__stop-circle"
            cx={-40}
            cy={-55}
            r="3"
          />
          <circle
            className="m-ladder__stop-circle"
            cx={40}
            cy={-55}
            r="3"
          />
          <div
            className="mock-tippy"
          >
            <div
              className="mock-tippy-content"
            >
              MELWA Name
            </div>
            <text
              className="m-ladder__timepoint-name"
              dominantBaseline="middle"
              textAnchor="middle"
              x="0"
              y={-55}
            >
              MELWA
            </text>
          </div>
          <circle
            className="m-ladder__stop-circle"
            cx={-40}
            cy={-110}
            r="3"
          />
          <circle
            className="m-ladder__stop-circle"
            cx={40}
            cy={-110}
            r="3"
          />
          <div
            className="mock-tippy"
          >
            <div
              className="mock-tippy-content"
            >
              HHGAT Name
            </div>
            <text
              className="m-ladder__timepoint-name"
              dominantBaseline="middle"
              textAnchor="middle"
              x="0"
              y={-110}
            >
              HHGAT
            </text>
          </div>
        </svg>
      </div>
      <div
        className="m-incoming-box"
      />
    </div>
  </div>
</div>
`;

exports[`LadderPage renders with vehicles and selected vehicles 1`] = `
<div
  className="m-ladder-page m-ladder-page--picker-container-visible "
>
  <div
    className="m-notifications"
  />
  <div
    className="m-picker-container visible"
    data-testid="picker-container"
  >
    <div
      className="c-drawer-tab"
    >
      <button
        className="c-drawer-tab__tab-button"
        data-testid="drawer-tab-button"
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-ladder-page__routes-presets-toggle"
    >
      <button
        className="m-ladder-page__routes_picker_button_selected"
        id="m-ladder-page__routes_picker_button"
        onClick={[Function]}
      >
        Routes
      </button>
      <button
        className="m-ladder-page__routes_picker_button_unselected"
        id="m-ladder-page__presets_picker_button"
        onClick={[Function]}
      >
        Presets
      </button>
    </div>
    <div
      className="m-route-picker"
    >
      <div
        className="m-route-filter"
      >
        <div
          className="m-route-filter__text"
        >
          <input
            className="m-route-filter__input"
            onChange={[Function]}
            onKeyDown={[Function]}
            placeholder="Search routes"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="m-garage-filter"
      >
        <button
          className="m-garage-filter__show-hide-button"
          onClick={[Function]}
          title="Toggle Garage Filter"
        >
          <div
            className="m-garage-filter__header"
          >
            Filter garages
          </div>
          <div
            className="m-garage-filter__show-hide-icon"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </div>
        </button>
      </div>
      <div
        className="m-route-picker__routes-container"
      >
        <ul
          className="m-route-picker__route-list"
        >
          <li>
            <button
              className="m-route-picker__route-list-button"
              onClick={[Function]}
            >
              28
            </button>
          </li>
        </ul>
        <ul
          className="m-route-picker__selected-routes"
        >
          <li>
            <button
              className="m-route-picker__selected-routes-button"
              onClick={[Function]}
            >
              1
              <span
                className="m-route-picker__selected-routes-button-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    className="m-picker-container-overlay"
    data-testid="picker-container-overlay"
    onClick={[Function]}
  />
  <div
    className="m-ladder-page__tab-bar-and-ladders"
  >
    <div
      className="m-ladder-page__route-tab-bar"
      role="tablist"
    >
      <div
        className="m-ladder-page__tab m-ladder-page__tab-current"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        <div
          className="m-ladder-page__tab-contents"
        >
          <div
            className="m-ladder-page__tab-title"
          >
            Untitled
          </div>
          <button
            className="m-ladder-page__tab-save-button"
            onClick={[Function]}
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
          <button
            className="m-close-button"
            data-testid="close-button"
            onClick={[Function]}
            title="Close"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
          </button>
        </div>
      </div>
      <button
        className="m-ladder-page__add-tab-button"
        onClick={[Function]}
      >
        <span
          className="m-ladder-page__add-tab-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-route-ladders"
      data-testid="route-ladders-div"
      onWheel={[Function]}
    >
      <div
        className="m-route-ladder__header"
      >
        <button
          className="m-close-button"
          data-testid="close-button"
          onClick={[Function]}
          title="Close"
        >
          <span
            className=""
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
        </button>
        <div
          className="m-route-ladder__route-name"
        >
          1
        </div>
      </div>
      <div
        className="m-route-ladder__controls"
      >
        <button
          className="m-route-ladder__reverse"
          onClick={[Function]}
        >
          <span
            className="m-route-ladder__reverse-icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "SVG",
              }
            }
          />
          Reverse
        </button>
      </div>
      loading...
    </div>
  </div>
  <div
    className="m-properties-panel"
    id="m-properties-panel"
  >
    <div
      className="m-ghost-properties-panel"
    >
      <div
        className="m-properties-panel__header-wrapper"
      >
        <div
          className="m-properties-panel__header"
        >
          <div
            className="m-properties-panel__label"
          >
            <svg
              style={
                Object {
                  "height": 64,
                  "width": 64,
                }
              }
              viewBox="-32 -20 64 64"
            >
              <g
                className="m-vehicle-icon m-vehicle-icon--large ghost early-red"
              >
                <rect
                  className="m-vehicle-icon__label-background"
                  height={24}
                  rx={12}
                  ry={12}
                  width={64}
                  x={-32}
                  y={19}
                />
                <text
                  className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                  dominantBaseline="central"
                  textAnchor="middle"
                  x="0"
                  y={31}
                >
                  N/A
                </text>
                <g
                  transform="scale(0.7) translate(-24,-23)"
                >
                  <path
                    className="m-vehicle-icon__ghost-highlight"
                    d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                    stroke-join="round"
                  />
                  <path
                    className="m-vehicle-icon__ghost-body"
                    d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                    stroke-join="round"
                  />
                  <ellipse
                    className="m-vehicle-icon__ghost-eye"
                    cx="19.73"
                    cy="22.8"
                    rx="3.11"
                    ry="3.03"
                  />
                  <ellipse
                    className="m-vehicle-icon__ghost-eye"
                    cx="35.29"
                    cy="22.8"
                    rx="3.11"
                    ry="3.03"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            className="m-properties-panel__variant"
          >
            <div
              className="m-properties-panel__inbound-outbound"
            >
              Outbound
            </div>
            <div
              className="m-route-variant-name"
            >
              <span
                className="m-route-variant-name__route-id"
              >
                1_
              </span>
               headsign
            </div>
          </div>
          <div
            className="m-properties-panel__close-ping"
          >
            <button
              className="m-close-button"
              data-testid="close-button"
              onClick={[Function]}
              title="Close"
            >
              <span
                className=""
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "SVG",
                  }
                }
              />
            </button>
          </div>
        </div>
        <ul
          className="m-tabs__tab-list"
          role="tablist"
        >
          <li
            className="m-tabs__tab m-tabs__tab--selected"
          >
            <button
              aria-selected={true}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Status
            </button>
          </li>
          <li
            className="m-tabs__tab"
          >
            <button
              aria-selected={false}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Run
            </button>
          </li>
          <li
            className="m-tabs__tab"
          >
            <button
              aria-selected={false}
              onClick={[Function]}
              role="tab"
            >
              <svg
                className="m-tabs__tab-status-icon"
                height="14"
                width="14"
              >
                <circle
                  className="m-tabs__tab-status-icon-outer-circle"
                  cx="7"
                  cy="7"
                  r="6"
                />
                <circle
                  className="m-tabs__tab-status-icon-inner-circle"
                  cx="7"
                  cy="7"
                  r="4"
                />
              </svg>
              Block
            </button>
          </li>
        </ul>
      </div>
      <div
        className="m-tabs__tab-panel"
      >
        <div
          className="m-ghost-properties-panel__no-waiver-banner"
        >
          <div
            className="m-ghost-properties-panel__no-waiver-banner-header"
          >
            <span
              className="m-ghost-properties-panel__no-waiver-banner-alert-icon"
            >
              <svg
                className="c-icon-alert-circle"
                viewBox="-3 -3 54 54"
              >
                <g
                  className="c-icon-alert-circle--highlighted"
                >
                  <circle
                    className="c-icon-alert-circle__outline"
                    cx="24"
                    cy="24"
                    r="27"
                  />
                  <circle
                    className="c-icon-alert-circle__fill"
                    cx="24"
                    cy="24"
                    r="22.59"
                  />
                  <g
                    className="c-icon-alert-circle__exclamation-point"
                  >
                    <path
                      d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
                    />
                    <path
                      d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
                    />
                  </g>
                </g>
              </svg>
            </span>
            <div
              className="m-ghost-properties-panel__no-waiver-banner-title"
            >
              Unknown Ghost Bus - No Dispatcher Note
            </div>
          </div>
          A ghost bus or dropped trip has been automatically detected on this route but no reason has been logged yet. Once a dispatcher generates a note, it will appear here.
        </div>
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  Not Available
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden={true}
    className="m-properties-panel__modal-overlay"
    onClick={[Function]}
  />
</div>
`;
